Included ipc faiss index

--- a/chatbot.ipynb
+++ b/chatbot.ipynb
@@ -68,13 +68,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "d924f68c",
    "metadata": {},
    "outputs": [],
    "source": [
     "ipc_index, ipc_meta = load_index_and_meta(\"ipc.index\", \"ipc_meta.json\")\n",
-    "judg_index, judg_meta = load_index_and_meta(\"judgements.index\", \"judgements_meta.json\")"
+    "judg_index, judg_meta = load_index_and_meta(\"judgements.index\", \"metadata.json\")"
    ]
   },
   {
