--- a/chatbot.ipynb
+++ b/chatbot.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "id": "349d4443",
    "metadata": {},
    "outputs": [],
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "id": "30d4ba95",
    "metadata": {},
    "outputs": [],
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "id": "db008976",
    "metadata": {},
    "outputs": [],
@@ -68,18 +68,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "d924f68c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "ipc_index, ipc_meta = load_index_and_meta(\"ipc.index\", \"ipc_meta.json\")\n",
-    "judg_index, judg_meta = load_index_and_meta(\"judgements.index\", \"metadata.json\")"
+    "ipc_index, ipc_meta = load_index_and_meta(\"ipc.index\", \"ipc.json\")\n",
+    "judg_index, judg_meta = load_index_and_meta(\"judgments.index\", \"judgments.json\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "4d2f7be7",
    "metadata": {},
    "outputs": [],
@@ -92,16 +92,28 @@
     "                      \n",
     "                    provide an suitable reply for the current question by utilizing previous conversations, keep it around 20 to 30 words .\n",
     "                      Utilize similar case judgement and compare it with the user case summary and reply but do not repeat about judgement in every replies.\n",
-    "                      Only use these given text as knowledge, do not add your own knowledge.\n",
-    "                     Only talk about legal replies DO NOT REPLY ANY QUESTIONS WHICH ARE OUT OF INDIAN PENAL CODE .\"\"\")"
+    "                      Only use these given text as knowledge and reply with that knowledge DONT Retrieve your own knowledge\n",
+    "                     Only talk about legal replies DO NOT REPLY ANY QUESTIONS WHICH ARE OUT OF INDIAN PENAL CODE .\n",
+    "                      Don't reply to refer for an legal advisor\"\"\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "bbc7d832",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\nihca\\AppData\\Local\\Temp\\ipykernel_14452\\3123097401.py:2: LangChainDeprecationWarning: Please see the migration guide at: https://python.langchain.com/docs/versions/migrating_memory/\n",
+      "  memory=ConversationBufferMemory()\n",
+      "C:\\Users\\nihca\\AppData\\Local\\Temp\\ipykernel_14452\\3123097401.py:3: LangChainDeprecationWarning: The class `ConversationChain` was deprecated in LangChain 0.2.7 and will be removed in 1.0. Use :class:`~langchain_core.runnables.history.RunnableWithMessageHistory` instead.\n",
+      "  conversion = ConversationChain(llm=llm,memory=memory,prompt=custom,verbose=False)\n"
+     ]
+    }
+   ],
    "source": [
     "llm=ollama()\n",
     "memory=ConversationBufferMemory()\n",
@@ -110,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 16,
    "id": "875ecf6a",
    "metadata": {},
    "outputs": [
@@ -121,25 +133,13 @@
       "⚖️ IPC + Judgement Chatbot (type 'exit' to quit)\n",
       "\n",
       "\n",
-      "Bot:  Based on the user query, the following Indian Penal Code (IPC) sections could potentially apply:\n",
+      "Bot:  Based on the user's query, it seems like they might have committed an act that could fall under Section 302 of the Indian Penal Code (IPC), which pertains to murder.\n",
       "\n",
-      "1. Section 376 - Rape: This section criminalizes all forms of sexual intercourse without consent, including when the victim is under 18 years old or incapable of giving consent due to intoxication or unsoundness of mind. The penalty for rape includes imprisonment ranging from 7 years up to life and may also include a fine.\n",
+      "Section 302 IPC defines murder as the intentional causing of death or such bodily injury as is likely to cause death, with the intention of causing death, or with the knowledge that it is likely to cause death. The punishment for murder under Section 302 of the IPC is imprisonment for life, which means imprisonment until the convict's death.\n",
       "\n",
-      "2. Section 342 - Wrongful confinement: This section penalizes the act of unlawfully confining a person against their will, which could potentially apply if the girl was forced or tricked into a situation where she became pregnant. The penalty for wrongful confinement is imprisonment up to two years, or fine, or both.\n",
+      "However, since the user's query suggests a history of daily torture and ragging, there could potentially be additional charges filed based on other sections as well. The acts of ragging or torturing others are criminal offenses under Section 326 (voluntarily causing grievous hurt) or even Section 307 (attempt to murder), depending on the severity and frequency of the actions mentioned.\n",
       "\n",
-      "3. Section 317 - Abetment of an offence punishable with death or imprisonment for life or imprisonment: This section applies when a person abets or procures another person to commit any offense that carries the punishment of death, imprisonment for life, or imprisonment. In this case, it could potentially apply if your friend attempted to persuade or encourage someone else (possibly himself) to commit an offense like rape. The penalty includes the punishment provided for the offense abetted and also any fine provided in the IPC.\n",
-      "\n",
-      "4. Section 320 - Causing hurt: This section penalizes the act of intentionally causing hurt to another person, which could potentially apply if your friend caused physical harm during the rape or in some other way. The penalty for causing hurt is imprisonment up to three years, or fine, or both.\n",
-      "\n",
-      "5. Section 323 - Voluntarily causing hurt: This section penalizes the act of intentionally causing hurt to any person using dangerous weapons or means, which could potentially apply if your friend used violence or force during the rape. The penalty for voluntarily causing hurt is imprisonment up to two years, or fine, or both.\n",
-      "\n",
-      "6. Section 324 - Voluntarily causing grievous hurt: This section penalizes the act of intentionally causing grievous hurt to any person using dangerous weapons or means, which could potentially apply if your friend caused significant physical harm during the rape. The penalty for voluntarily causing grievous hurt is imprisonment up to seven years, or fine, or both.\n",
-      "\n",
-      "7. Section 326 - Voluntarily causing grievous hurt by dangerous weapons or means: This section penalizes the act of intentionally causing grievous hurt using a dangerous weapon or means, which could potentially apply if your friend used such methods during the rape. The penalty for voluntarily causing grievous hurt by dangerous weapons or means is imprisonment up to ten years, and also fine, or both.\n",
-      "\n",
-      "8. Section 328 - Causing hurt by an act endangering life or personal safety: This section penalizes the act of intentionally doing an act which is likely to cause hurt and is also likely to endanger life or personal safety, which could potentially apply if your friend's actions during the rape put the girl at risk. The penalty for causing hurt by an act endangering life or personal safety is imprisonment up to two years, or fine, or both.\n",
-      "\n",
-      "In addition, since the girl became pregnant as a result of this incident, there might also be charges related to abortion and child abandonment under relevant laws and regulations. The specific punishments for these offenses may vary depending on the circumstances and applicable laws. It is essential to consult with legal professionals to get accurate information about potential penalties in your case.\n",
+      "It is essential to stress that this response should not be considered as legal advice but only a general interpretation based on provided information. For accurate guidance, it is always best to consult with a qualified legal professional.\n",
       "\n"
      ]
     }
@@ -156,14 +156,18 @@
     "        # Step 2: Build context\n",
     "context = \"Relevant IPC Sections:\\n\"\n",
     "for sec in ipc_results:\n",
-    "    context += f\"- Section {sec['section_number']}: {sec['section_text']} (Punishment: {sec['punishment']})\\n\"\n",
+    "    context += f\"- Section {sec['section_no']}: {sec['Description']} (Punishment: {sec['punishment_raw']})\\n\"\n",
     "\n",
     "prompt = f\"User Query: {user_input}\\n\\n{context}\\n\\nBased on the above IPC sections, Name the sections relating to the user query and also list possible punishments.\"\n",
     "Reply_1=llm._call(prompt)\n",
     "\n",
     "context += \"\\nRelevant Judgements:\\n\"\n",
     "for case in judg_results:\n",
-    "    context += f\"- {case['section']}: {case['text']}\\n\"\n",
+    "    context += f\"\"\"- Case facts: {case['case_facts']}\n",
+    "Issues: {case['issues']}\n",
+    "Arguments: {case['arguments']}\n",
+    "Decision: {case['decision']}\n",
+    "\"\"\"\n",
     "\n",
     "\n",
     "\n",
@@ -174,19 +178,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "id": "ca8260dc",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'context' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[1], line 7\u001b[0m\n\u001b[0;32m      4\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mBot: Goodbye!\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m      5\u001b[0m     \u001b[38;5;28;01mbreak\u001b[39;00m\n\u001b[1;32m----> 7\u001b[0m user_input\u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m similar case judgements : \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[43mcontext\u001b[49m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m      9\u001b[0m answer \u001b[38;5;241m=\u001b[39m conversion\u001b[38;5;241m.\u001b[39mpredict(\u001b[38;5;28minput\u001b[39m\u001b[38;5;241m=\u001b[39muser_input)\n\u001b[0;32m     11\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124mBot: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00manswer\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'context' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Bot:  In the Indian Penal Code, intention to inflict a bodily injury sufficient to cause death, even if not intended, can lead to murder charges. Multiple injuries causing death due to public enmity have resulted in conviction (e.g., Rompicherla case). However, specific circumstances vary for each case. Consult a legal advisor for advice on your situation.\n",
+      "\n",
+      "Bot: Goodbye!\n"
      ]
     }
    ],
