Final update in main conversationchain

--- a/chatbot.ipynb
+++ b/chatbot.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "349d4443",
    "metadata": {},
    "outputs": [],
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "30d4ba95",
    "metadata": {},
    "outputs": [],
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "db008976",
    "metadata": {},
    "outputs": [],
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "id": "d924f68c",
    "metadata": {},
    "outputs": [],
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "4d2f7be7",
    "metadata": {},
    "outputs": [],
@@ -90,16 +90,16 @@
     "                      \n",
     "                      Current question and also judgements :{input}\n",
     "                      \n",
-    "                    provide an suitable reply for the current question by utilizing previous conversations, keep it around 20 to 30 words .\n",
-    "                      Utilize similar case judgement and compare it with the user case summary and reply but do not repeat about judgement in every replies.\n",
-    "                      Only use these given text as knowledge and reply with that knowledge DONT Retrieve your own knowledge\n",
-    "                     Only talk about legal replies DO NOT REPLY ANY QUESTIONS WHICH ARE OUT OF INDIAN PENAL CODE .\n",
-    "                      Don't reply to refer for an legal advisor\"\"\")"
+    "                    provide an suitable reply for the current question by utilizing previous conversations and keep it around 20 to 30 words .\n",
+    "                      Utilize similar case judgement and compare it with the user case summary and then reply but do not repeat about judgements in every replies.\n",
+    "                      Only use the given text as knowledge, Do Not Retrieve your own knowledge\n",
+    "                      Only Reply using the given IPC sections, STICK TO ONLY THIS TEXT AND PREVIOUS CONVERSATION FOR KNOWLEDGE.\n",
+    "                      Consider youself as an legal advisor and you are the professional.\"\"\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "id": "bbc7d832",
    "metadata": {},
    "outputs": [
@@ -107,9 +107,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\nihca\\AppData\\Local\\Temp\\ipykernel_14452\\3123097401.py:2: LangChainDeprecationWarning: Please see the migration guide at: https://python.langchain.com/docs/versions/migrating_memory/\n",
+      "C:\\Users\\nihca\\AppData\\Local\\Temp\\ipykernel_4152\\3123097401.py:2: LangChainDeprecationWarning: Please see the migration guide at: https://python.langchain.com/docs/versions/migrating_memory/\n",
       "  memory=ConversationBufferMemory()\n",
-      "C:\\Users\\nihca\\AppData\\Local\\Temp\\ipykernel_14452\\3123097401.py:3: LangChainDeprecationWarning: The class `ConversationChain` was deprecated in LangChain 0.2.7 and will be removed in 1.0. Use :class:`~langchain_core.runnables.history.RunnableWithMessageHistory` instead.\n",
+      "C:\\Users\\nihca\\AppData\\Local\\Temp\\ipykernel_4152\\3123097401.py:3: LangChainDeprecationWarning: The class `ConversationChain` was deprecated in LangChain 0.2.7 and will be removed in 1.0. Use :class:`~langchain_core.runnables.history.RunnableWithMessageHistory` instead.\n",
       "  conversion = ConversationChain(llm=llm,memory=memory,prompt=custom,verbose=False)\n"
      ]
     }
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "id": "875ecf6a",
    "metadata": {},
    "outputs": [
@@ -133,13 +133,15 @@
       "⚖️ IPC + Judgement Chatbot (type 'exit' to quit)\n",
       "\n",
       "\n",
-      "Bot:  Based on the user's query, it seems like they might have committed an act that could fall under Section 302 of the Indian Penal Code (IPC), which pertains to murder.\n",
+      "Bot:  Based on the user's query, the relevant Indian Penal Code (IPC) sections that could potentially apply are:\n",
       "\n",
-      "Section 302 IPC defines murder as the intentional causing of death or such bodily injury as is likely to cause death, with the intention of causing death, or with the knowledge that it is likely to cause death. The punishment for murder under Section 302 of the IPC is imprisonment for life, which means imprisonment until the convict's death.\n",
+      "1. Section 324 - Voluntarily causing hurt by dangerous weapons or means: This section might apply because the user admitted to killing their friend, which could be interpreted as causing hurt voluntarily. The punishment for this section includes imprisonment for a term extending up to three years, fine, or both.\n",
       "\n",
-      "However, since the user's query suggests a history of daily torture and ragging, there could potentially be additional charges filed based on other sections as well. The acts of ragging or torturing others are criminal offenses under Section 326 (voluntarily causing grievous hurt) or even Section 307 (attempt to murder), depending on the severity and frequency of the actions mentioned.\n",
+      "2. Section 302 - Murder: If the act of causing harm resulted in death, then Section 302 might also apply. However, it's important to note that intent is a crucial factor in determining whether an act falls under this section. In this case, if the user intentionally caused their friend's death, they could be charged with murder, which carries a maximum punishment of death or life imprisonment.\n",
       "\n",
-      "It is essential to stress that this response should not be considered as legal advice but only a general interpretation based on provided information. For accurate guidance, it is always best to consult with a qualified legal professional.\n",
+      "3. Section 304- Part I - Causing death by rash or negligent act: If the harm was caused without the intent to kill but recklessly, this section might apply. The punishment for this section includes imprisonment up to ten years, and a fine.\n",
+      "\n",
+      "Please remember that I am an AI model and my responses are based on the information provided in the Indian Penal Code. It's essential to consult with legal professionals to interpret laws accurately and understand the specific circumstances of each case.\n",
       "\n"
      ]
     }
@@ -178,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "ca8260dc",
    "metadata": {},
    "outputs": [
@@ -187,9 +189,8 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Bot:  In the Indian Penal Code, intention to inflict a bodily injury sufficient to cause death, even if not intended, can lead to murder charges. Multiple injuries causing death due to public enmity have resulted in conviction (e.g., Rompicherla case). However, specific circumstances vary for each case. Consult a legal advisor for advice on your situation.\n",
-      "\n",
-      "Bot: Goodbye!\n"
+      "Bot:  Based on the provided judgement, intentional harm resulting in death can be punishable under IPC Section 302 or 324. Circumstantial evidence can support a conviction if it forms a clear and unambiguous chain proving your involvement. Be aware that any intentional harm could lead to legal consequences.\n",
+      "\n"
      ]
     }
    ],
